--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
- <div class="click-event box">
-    <h4>Quelle est la capitale de la Suisse</h4>
-    <button id="btn1">Berne</button>
-   <button id="btn2">Zurich</button>
-   <p>La bonne réponse est Berne</p>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="click-event box" id="box">
+      <h4>Quelle est la capitale de la Suisse</h4>
+      <button id="btn1">Berne</button>
+      <button id="btn2">Zurich</button>
+      <p>La bonne réponse est Berne</p>
+
+      <div class="mousemove"></div>
+    </div>
     <script src="./index.js"></script>
- </div>   
-</body>
+  </body>
 </html>
