--- a/index.html
+++ b/index.html
@@ -12,9 +12,39 @@
       <button id="btn1">Berne</button>
       <button id="btn2">Zurich</button>
       <p>La bonne réponse est Berne</p>
-
-      <div class="mousemove"></div>
     </div>
+    <div class="mousemove"></div>
+    <div class="keypress box">
+      <h2>
+        <div class="mousemove"></div>
+        Vous appuyez sur la touche : <span id="key"></span>
+      </h2>
+    </div>
+
+    <nav>
+      <ul>
+        <li>Accueil</li>
+        <li>Service</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+
+    <form action="" class="box">
+ <input type="text" placeholder="Entrer votre nom">
+ <select name="" id="">
+<option value="">Sélectionner votre langage</option>
+<option value="Javascript">"Javascript"</option>
+<option value="PHP">"PHP"</option>
+<option value="Python">"Python"</option>
+
+ </select>
+ <input type="checkbox" name="cgv" id="">
+ <label for="cgv">Acceptez les CGV</label>
+<input type="submit" value="Valider">
+
+<div></div>
+
+    </form>
     <script src="./index.js"></script>
   </body>
 </html>
