--- a/effet mouse/index.html
+++ b/effet mouse/index.html
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-    <span class="mouve" id="cursor"> </span>
-    <span class="mouve" id="mouse1"> </span>
-    <span class="mouve" id="mouse2"> </span>
+    <span class="mouse" id="cursor"> </span>
+    <span class="mouse" id="mouse1"> </span>
+    <span class="mouse" id="mouse2"> </span>
 
     <nav>
       <h3>Helium</h3>
